# auth_service_FastAPI

./: .dockerignore  .env_dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  example.env  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: tests.yml
app/: config_reader.py  main.py
app/api/: api.py
app/api/routers/: auth.py  signup.py
app/db/: engine.py  models.py
app/depends/: __init__.py  db.py
app/repo/: user_repo.py
app/repo/base/: __init__.py  repository.py
app/schemas/: activate_code.py  user.py  validator.py
app/services/: depends.py  security.py  sender.py
app/services/workflow/: celery.py
app/services/workflow/tasks/: send_tasks.py
app/utils/: activate_code.py
migrations/: env.py
migrations/versions/: 1_initial.py
postgres/: postgresql.conf
src/: alembic.ini
src/app/: config_reader.py  main.py
src/app/api/: __init__.py  api.py  setup.py
src/app/api/depends/: __init__.py  auth.py  db.py
src/app/api/routers/: __init__.py  healhcheck.py  login.py  signup.py  user.py
src/app/api/schemas/: activate_code.py  user.py  validator.py
src/app/infrastructure/db/: engine.py  factory.py  models.py
src/app/infrastructure/repo/: user_repo.py
src/app/infrastructure/repo/base/: __init__.py  repository.py
src/app/infrastructure/workflow/: celery.py  utils.py  worker.py
src/app/infrastructure/workflow/tasks/: __init__.py  periodic.py  send_tasks.py
src/app/templates/: activate.html  temp.html
src/app/utils/: activate_code.py  security.py  sender.py  uuid.py
src/app/utils/security/: activate_code.py  hashed.py  jwt.py
src/migrations/: env.py
src/migrations/versions/: 1_initial.py
src/tests/: conftest.py  test_healthcheck.py  utils.py
src/tests/integrity/user/: test_create.py
src/tests/unit/: test_password.py  test_security.py
src/tests/user/: create.py  test_create.py
