[tool.poetry]
name = "service-auth"
version = "0.1.0"
description = ""
authors = ["AgafonovSiberia <agafonov@chita.ru>"]
readme = "README.md"
packages = [{include = "service_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
sqlalchemy = "^2.0.6"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
alembic = "^1.10.2"
uvicorn = "^0.21.0"
asyncpg = "^0.27.0"
starlette = "^0.26.1"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
redmail = "^0.6.0"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
