[tool.poetry]
name = "service-auth"
version = "0.1.0"
description = ""
authors = ["AgafonovSiberia <agafonov@chita.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
sqlalchemy = "^2.0.6"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
alembic = "^1.10.2"
uvicorn = "^0.21.0"
asyncpg = "^0.27.0"
starlette = "^0.26.1"
email-validator = "^1.3.1"
python-dotenv = "^1.0.0"
redmail = "^0.6.0"
celery = "^5.2.7"
redis = "^4.5.1"
flower = "^1.2.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
httpx = "^0.23.3"
anyio = "^3.6.2"
docker = "^6.0.1"
testcontainers = {extras = ["postgres"], version = "^3.7.1"}
psycopg2-binary = "^2.9.5"
celery-mock = "^1.1.7"
mock = "^5.0.1"
isort = "^5.12.0"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.257"
pre-commit = "^3.2.0"
pyright = "^1.1.299"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '.*/migrations/.*'

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
py_version=311
skip = [".gitignore", ".dockerignore"]

